--- a/resources/styles/styles.css
+++ b/resources/styles/styles.css
@@ -1,1 +1,15 @@
+body {
+  background-image: url("https://cliparts.zone/img/739644.jpg");
+  font-family: 'Maiden Orange', cursive;
+  background-size: cover;
+  text-align: center;
+  font-size: 16px;
+}
 
+ul {
+  list-style: none;
+}
+
+.addZooAnimal {
+  text-align: left;
+}
